--- a/src/Components/Logo/Logo.module.css
+++ b/src/Components/Logo/Logo.module.css
@@ -1,9 +1,11 @@
+
 .container {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     gap: 10px;
+    width: 100px;
 
 }
 .Circle {
